cdebconf (0.83) UNRELEASED; urgency=low

  * Disable flow control in the newt frontend. It's very confusing when you
    press Ctrl-S by accident and wonder why the installer stopped accepting
    input.

 -- Colin Watson <cjwatson@debian.org>  Mon, 25 Jul 2005 12:27:39 +0100

cdebconf (0.82) unstable; urgency=low

  [ Colin Watson ]
  * Simplify strchoicesplit() slightly.
  * Use (char *) 0 as the sentinel to strvacat(), not just 0; this makes a
    difference on some 64-bit systems.
  * Perform printf format string (requires gcc) and sentinel (requires gcc
    >= 4) checking on various function arguments.

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Arief S Fitrianto
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Slovak (sk.po) by Peter Mann
    - Tagalog (tl.po) by Eric Pareja
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Vietnamese (vi.po) by Clytie Siddall
    - Wolof (wo.po) by Mouhamadou Mamoune Mbacke
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Jul 2005 16:41:32 +0300

cdebconf (0.81) unstable; urgency=low

  * Colin Watson
    - When building the slang frontend against slang2, enable UTF-8
      according to the locale.
    - Add a continue button to string and password questions in the newt
      frontend, although you can still just press Enter in the text entry
      box (closes: #257969).
    - Document <Tab>, <Space>, and <Enter> in a help line for the newt
      frontend (closes: #247233).
    - Do much less work in the frontend's SIGCHLD handler; instead, just
      tell confmodule_communicate() to return at the next opportunity. This