@@ -3,6 +3,7 @@ cdebconf (0.83) UNRELEASED; urgency=low
   * Disable flow control in the newt frontend. It's very confusing when you
     press Ctrl-S by accident and wonder why the installer stopped accepting
     input.
+  * Fix memory leak in confmodule_communicate.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 25 Jul 2005 12:27:39 +0100
 
